--- a/tutustuminen_työkaluihin/index.html
+++ b/tutustuminen_työkaluihin/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBsivusto</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-<h1>Task List</h1>
-  <p id="msg">Current tasks:</p>
-    <ul>    
-    <li class="list">Add visual styles</li>
-    <li class="list">Add light and dark themes</li>
-    <li>Enable switching the theme</li>
-</ul>
-<div>
-  <button class="btn">Dark</button>
-</div>
-<script src="app.js"></script>
-<noscript>you need to enable javascript to view the full site.</noscript>
-</body>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <h1>Task List :D:D:D</h1>
+    <p id="msg">Current tasks:</p>
+    <ul>
+      <li class="list">Add visual styles</li>
+      <li class="list">Add light and dark themes</li>
+      <li>Enable switching the theme</li>
+    </ul>
+    <div>
+      <button class="btn">Dark</button>
+    </div>
+    <script src="app.js"></script>
+    <noscript>you need to enable javascript to view the full site.</noscript>
+  </body>
 </html>
-<body class="dark-theme">
-
+<body class="dark-theme"></body>
