ws01html kommit

--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -6,49 +6,49 @@
   <body>
     <h1>Tervetuloa sivulle!</h1>
     <p>Olen Elias, 21 vuotias Tikkurilasta.</p>
-    <img src="eliaskahri.png" width="250" height="300" alt="eliaskahri" />
+    <img src="eliaskahri.png" width="250" height="300" alt="Kuva Elias Kahrista" />
+    <h2>Harrastukset</h2>
+    <ol>
+      <li>Pyöräily</li>
+      <li>Videopelit</li>
+      <li>Jalkapallo</li>
+    </ol>
+    <h2>Muuta</h2>
+    <ul>
+      <li>Ruuan teko</li>
+      <li>Lautapelit</li>
+      <li>Padel</li>
+    </ul>
+    <a href="https://youtube.com">youtube</a>
+    <table>
+      <tr>
+        <th>Englannin kurssi</th>
+        <th>Liiketoiminnan kurssi</th>
+      </tr>
+      <tr>
+        <td>Englannin kurssi sujuu hyvin</td>
+        <td>Liiketoiminnan kurssi menee hyvin</td>
+      </tr>
+      <tr>
+        <td>Teemme itsenäisiä tehtäviä</td>
+        <td>Kurssilla teemme laajan raportin/työkirjan</td>
+      </tr>
+      <tr>
+        <td>Kurssi vaikuttaa mukavalta</td>
+        <td>Tällä hetkellä kurssi vaikuttaa hieman sekavalta</td>
+      </tr>
+    </table>
+    <br /><br />
+    <form>
+      <label for="name">Elias:</label>
+      <input type="text" name="Elias" id="Elias" /><br /><br />
+      <label for="email">elk00147@laurea.fi:</label>
+      <input
+        type="email"
+        name="elk00147@laurea.fi"
+        id="elk00147@laurea.fi"
+      /><br /><br />
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
-<h2>Harrastukset</h2>
-<ol>
-  <li>Pyöräily</li>
-  <li>Videopelit</li>
-  <li>Jalkapallo</li>
-</ol>
-<h2>Muuta</h2>
-<ul>
-  <li>Ruuan teko</li>
-  <li>Lautapelit</li>
-  <li>Padel</li>
-</ul>
-<a href="www.youtube.com">youtube</a>
-<table>
-  <tr>
-    <th>Englannin kurssi</th>
-    <th>Liiketoiminnan kurssi</th>
-  </tr>
-  <tr>
-    <td>Englannin kurssi sujuu hyvin</td>
-    <td>Liiketoiminnan kurssi menee hyvin</td>
-  </tr>
-  <tr>
-    <td>Teemme itsenäisiä tehtäviä</td>
-    <td>Kurssilla teemme laajan raportin/työkirjan</td>
-  </tr>
-  <tr>
-    <td>Kurssi vaikuttaa mukavalta</td>
-    <td>Tällä hetkellä kurssi vaikuttaa hieman sekavalta</td>
-  </tr>
-</table>
-<br /><br />
-<form>
-  <label for="name">Elias:</label>
-  <input type="text" name="Elias" id="Elias" /><br /><br />
-  <label for="email">elk00147@laurea.fi:</label>
-  <input
-    type="email"
-    name="elk00147@laurea.fi"
-    id="elk00147@laurea.fi"
-  /><br /><br />
-  <input type="submit" value="Submit" />
-</form>
