--- a/WS01_HTML/index.html
+++ b/WS01_HTML/index.html
@@ -6,7 +6,12 @@
   <body>
     <h1>Tervetuloa sivulle!</h1>
     <p>Olen Elias, 21 vuotias Tikkurilasta.</p>
-    <img src="eliaskahri.png" width="250" height="300" alt="Kuva Elias Kahrista" />
+    <img
+      src="eliaskahri.png"
+      width="250"
+      height="300"
+      alt="Kuva Elias Kahrista"
+    />
     <h2>Harrastukset</h2>
     <ol>
       <li>Pyöräily</li>
@@ -38,17 +43,12 @@
         <td>Tällä hetkellä kurssi vaikuttaa hieman sekavalta</td>
       </tr>
     </table>
-    <br /><br />
     <form>
-      <label for="name">Elias:</label>
-      <input type="text" name="Elias" id="Elias" /><br /><br />
+      <label for="name">Elias Kahri</label>
+      <input type="text" id="name" name="Elias Kahri" /><br /><br />
       <label for="email">elk00147@laurea.fi:</label>
-      <input
-        type="email"
-        name="elk00147@laurea.fi"
-        id="elk00147@laurea.fi"
-      /><br /><br />
-      <input type="submit" value="Submit" />
+      <input type="email" id="email" name="email" /><br /><br />
+      <input type="Submit" value="Submit" />
     </form>
   </body>
 </html>
