--- a/WS03_Advanced_CSS/index.html
+++ b/WS03_Advanced_CSS/index.html
@@ -18,7 +18,7 @@
     <li>Item 4</li>
   </ul>
   <img src="messi.jpg" alt="Kuva Lionel Messista" class="filter-image">
-  <blockquote class="quote">
+  <blockquote class="quote"><br>
     The greatest of all time.
   </blockquote>
   </body>
