--- a/WS07_project/second.html
+++ b/WS07_project/second.html
@@ -129,7 +129,7 @@
       <label for="dot4"></label>
       <label for="dot5"></label>
     </div>
-    <h2 class="text-center">TOP TEAMS IN 2024</h2>
+    <h2 class="text-center">TOP TEAMS AND PLAYERS IN 2024</h2>
     <div class="teams">
       <div class="card">
         <img src="..//images/spirit.png" alt="Spirit" />
