--- a/WS07_project/fourth.html
+++ b/WS07_project/fourth.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="third.html">History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="fourth.html">More</a>
+              <a class="nav-link active" href="fourth.html">About</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -55,5 +55,33 @@
         </div>
       </div>
     </nav>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+    <div class="banner"></div>
+    <div class="content">
+    <h3>THE BASICS OF THE GAME AND OTHER FEATURES</h3>
+    <p>The most popular mode among the other modes is bomb defusal.
+      Terrorists must plant the bomb at <br>one of the two bombsites, bombsite A
+      or bombsite B. On otherside there are the counter-terrorists who
+      <br>must stop them or defuse the bomb if it's planted. Counter-Strikes most important thing
+      is communication. <br>Without communication you most likely aren't victorious.
+      The players need to communicate in voice-chat <br> about strategies, share information about the enemy
+      and support each other with utility, like grenades,<br> smoke grenades and flashbanges.
+    </p>
+</div>
+<div class="maps">
+  <h2>MAPS IN COUNTER-STRIKE</h2>
+  <p>There are a lot of maps to choose from in Counter-Strike.
+    The three most <br>famous maps in Counter-Strike are Dust 2, Mirage and Inferno.
+  </p>
+</div>
+<div class="container">
+<img src="../images/Dust_II_CS-GO.webp" width="312" height="312" alt="Dust2">
+<img src="../images/De_mirage_cs2.webp" width="312" height="312" alt="Mirage">
+<img src="../images/De_infernoCS2BSite.jpeg" width="312" height="312" alt="Inferno">
+</div>
   </body>
 </html>
