--- a/WS07_project/index.html
+++ b/WS07_project/index.html
@@ -11,11 +11,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Counter-Strike</a>
@@ -44,7 +39,7 @@
               <a class="nav-link" href="third.html">History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="fourth.html">More</a>
+              <a class="nav-link" href="fourth.html">About</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
@@ -72,5 +67,10 @@
 
         </p>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
