--- a/WS07_project/third.html
+++ b/WS07_project/third.html
@@ -38,7 +38,7 @@
               <a class="nav-link active" href="third.html">History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="fourth.html">More</a>
+              <a class="nav-link" href="fourth.html">About</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
