--- a/WS07_project/fourth.html
+++ b/WS07_project/fourth.html
@@ -10,11 +10,13 @@
     />
     <link rel="stylesheet" href="styles4.css" />
   </head>
-  
+
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Counter-Strike</a>
+        <a class="navbar-brand" href="#"
+          ><img src="../images/cs2.webp" height="30" width="30" alt="CS2"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,17 +43,6 @@
               <a class="nav-link active" href="fourth.html">About</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
         </div>
       </div>
     </nav>
@@ -62,26 +53,71 @@
     ></script>
     <div class="banner"></div>
     <div class="content">
-    <h3>THE BASICS OF THE GAME AND OTHER FEATURES</h3>
-    <p>The most popular mode among the other modes is bomb defusal.
-      Terrorists must plant the bomb at <br>one of the two bombsites, bombsite A
-      or bombsite B. On otherside there are the counter-terrorists who
-      <br>must stop them or defuse the bomb if it's planted. Counter-Strikes most important thing
-      is communication. <br>Without communication you most likely aren't victorious.
-      The players need to communicate in voice-chat <br> about strategies, share information about the enemy
-      and support each other with utility, like grenades,<br> smoke grenades and flashbanges.
-    </p>
+      <h3>THE BASICS OF THE GAME AND OTHER FEATURES</h3>
+      <p>
+        The most popular mode among the other modes is bomb defusal. Terrorists
+        must plant the bomb at <br />one of the two bombsites, bombsite A or
+        bombsite B. On otherside there are the counter-terrorists who <br />must
+        stop them or defuse the bomb if it's planted. Counter-Strikes most
+        important thing is communication. <br />Without communication you most
+        likely aren't victorious. The players need to communicate in voice-chat
+        <br />
+        about strategies, share information about the enemy and support each
+        other with utility, like grenades,<br />
+        smoke grenades and flashbanges.
+      </p>
+    </div>
+    <div class="maps">
+      <h2>MAPS IN COUNTER-STRIKE</h2>
+      <p>
+        There are a lot of maps to choose from in Counter-Strike. The three most
+        <br />famous maps in Counter-Strike are Dust 2, Mirage and Inferno.
+      </p>
+    </div>
+    <div class="container">
+      <div class="img-wrapper">
+        <img
+          src="../images/Dust_II_CS-GO.webp"
+          width="312"
+          height="312"
+          alt="Dust2"
+        />
+        <span class="img-text">Dust II</span>
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="../images/De_mirage_cs2.webp"
+          width="312"
+          height="312"
+          alt="Mirage"
+        />
+        <span class="img-text">Mirage</span>
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="../images/De_infernoCS2BSite.jpeg"
+          width="312"
+          height="312"
+          alt="Inferno"
+        />
+        <span class="img-text">Inferno</span>
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="contact-section">
+  <h2>Contact Us</h2>
+  <form class="contact-form">
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+    <button type="submit">Send</button>
+  </form>
 </div>
-<div class="maps">
-  <h2>MAPS IN COUNTER-STRIKE</h2>
-  <p>There are a lot of maps to choose from in Counter-Strike.
-    The three most <br>famous maps in Counter-Strike are Dust 2, Mirage and Inferno.
-  </p>
-</div>
-<div class="container">
-<img src="../images/Dust_II_CS-GO.webp" width="312" height="312" alt="Dust2">
-<img src="../images/De_mirage_cs2.webp" width="312" height="312" alt="Mirage">
-<img src="../images/De_infernoCS2BSite.jpeg" width="312" height="312" alt="Inferno">
-</div>
+    <footer class="footer">
+  &copy;  Elias Kahri. All rights reserved.
+</footer>
   </body>
 </html>
