--- a/WS07_project/second.html
+++ b/WS07_project/second.html
@@ -13,7 +13,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Counter-Strike</a>
+        <a class="navbar-brand" href="#"
+          ><img src="../images/cs2.webp" height="30" width="30" alt="CS2"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,17 +42,6 @@
               <a class="nav-link" href="fourth.html">About</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
         </div>
       </div>
     </nav>
@@ -59,12 +50,13 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-
+    <h2 class="text-center">TOP TEAMS AND PLAYERS IN 2024</h2>
     <input type="radio" name="position" id="dot1" checked />
     <input type="radio" name="position" id="dot2" />
     <input type="radio" name="position" id="dot3" />
     <input type="radio" name="position" id="dot4" />
     <input type="radio" name="position" id="dot5" />
+
     <main id="carousel">
       <div class="item">
         <img src="../images/donk.webp" alt="donk" />
@@ -129,7 +121,7 @@
       <label for="dot4"></label>
       <label for="dot5"></label>
     </div>
-    <h2 class="text-center">TOP TEAMS AND PLAYERS IN 2024</h2>
+  
     <div class="teams">
       <div class="card">
         <img src="..//images/spirit.png" alt="Spirit" />
@@ -161,6 +153,14 @@
         <img src="../images/fazeclan.png" width="320" height="320" alt="FaZe" />
         <div>FaZe Clan</div>
       </div>
+      <div class="card">
+        <img src="..//images/falcnons.png" width="320" height="320" alt="Falcons" />
+        <div>Team Falcons</div>
+      </div>
     </div>
+<h3 class="text-center">MAJOR TOURNAMENTS IN 2025</h3>
+<footer class="footer">
+  &copy;  Elias Kahri. All rights reserved.
+</footer>
   </body>
 </html>
