--- a/WS07_project/index.html
+++ b/WS07_project/index.html
@@ -13,7 +13,9 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Counter-Strike</a>
+        <a class="navbar-brand" href="#"
+          ><img src="../images/cs2.webp" height="30" width="30" alt="CS2"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,35 +44,28 @@
               <a class="nav-link" href="fourth.html">About</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
         </div>
       </div>
     </nav>
-    <div class="banner">
-      </div>
+    <div class="banner"></div>
     <div class="content">
-        <h1>WHAT IS COUNTER-STRIKE?</h1>
-        <p>Counter-Strike is a popular first-person shooter video game series
-          developed by Valve Corporation.<br> Teams compete against each other in
-          against each other as terrorists and counter-terrorists.<br> The game is
-          known for its strategic depth, fast-paced shooting and competitive esports scene.
-
-        </p>
+      <h1>WHAT IS COUNTER-STRIKE?</h1>
+      <p>
+        Counter-Strike is a popular first-person shooter video game series
+        developed by Valve Corporation.<br />
+        Teams compete against each other in against each other as terrorists and
+        counter-terrorists.<br />
+        The game is known for its strategic depth, fast-paced shooting and
+        competitive esports scene.
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
+   <footer class="footer">
+  &copy;  Elias Kahri. All rights reserved.
+</footer>
   </body>
 </html>
