--- a/WS07_project/third.html
+++ b/WS07_project/third.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Counter-Strike</a>
+        <a class="navbar-brand" href="#"><img src="../images/cs2.webp" height="30" width="30" alt="CS2"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,16 +41,7 @@
               <a class="nav-link" href="fourth.html">About</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
+      
           </form>
         </div>
       </div>
@@ -89,5 +80,8 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
+    <footer class="footer">
+  &copy;  Elias Kahri. All rights reserved.
+</footer>
   </body>
 </html>
