--- a/WS07_project/second.html
+++ b/WS07_project/second.html
@@ -9,10 +9,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="styles2.css" />
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+    <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img src="../images/cs2.webp" height="30" width="30" alt="CS2"
         /></a>
@@ -43,7 +44,7 @@
             </li>
           </ul>
         </div>
-      </div>
+    </div>
     </nav>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
@@ -158,9 +159,33 @@
         <div>Team Falcons</div>
       </div>
     </div>
-<h3 class="text-center">MAJOR TOURNAMENTS IN 2025</h3>
+    <br>
+    <br>
+    <br>
+    <br>
+
+<h3 class="text-center">MAJOR TOURNAMENTS IN COUNTER-STRIKE 2</h3>
+<p class="text-center">There a  lot of tournaments that have a prize pool over a million. <br>
+However, the most precious tournaments of the year are the majors. <br>
+Last Major was won by team Spirit in Shanghai. The most recognized <br>tournaments are usually held in Cologne,
+Germany and Katowice, Poland.</p>
+<div class="gallery">
+  <div class="img-wrapper">
+    <img src="../images/esl.webp" alt="Cologne Event" width="320" height="320">
+    <span class="img-text">ESL One Cologne</span>
+  </div>
+  <div class="img-wrapper">
+    <img src="../images/katowice.jpg" alt="Katowice Event" width="320" height="320">
+    <span class="img-text">ESL One Katowice</span>
+  </div>
+  <div class="img-wrapper">
+      <img src="..//images/cs2-major-shanghai.jpg" alt="Shanghai Major" width="320" height="320">
+      <span class="img-text">PGL Shanghai Major</span>
+  </div>
+</div>
+
 <footer class="footer">
   &copy;  Elias Kahri. All rights reserved.
 </footer>
-  </body>
+</body>
 </html>
