--- a/WS07_project/fourth.html
+++ b/WS07_project/fourth.html
@@ -71,7 +71,7 @@
       <h2>MAPS IN COUNTER-STRIKE</h2>
       <p>
         There are a lot of maps to choose from in Counter-Strike. The three most
-        <br />famous maps in Counter-Strike are Dust 2, Mirage and Inferno.
+        <br />famous maps in Counter-Strike are Dust II, Mirage and Inferno.
       </p>
     </div>
     <div class="container">
