--- a/WS07_project/fourth.html
+++ b/WS07_project/fourth.html
@@ -103,21 +103,24 @@
         <span class="img-text">Inferno</span>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <br />
     <div class="contact-section">
-  <h2>Contact Us</h2>
-  <form class="contact-form">
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-    <button type="submit">Send</button>
-  </form>
-</div>
-    <footer class="footer">
-  &copy;  Elias Kahri. All rights reserved.
-</footer>
+      <h2>Contact Us</h2>
+      <form class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea
+          name="message"
+          placeholder="Your Message"
+          rows="5"
+          required
+        ></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+    <footer class="footer">&copy; Elias Kahri. All rights reserved.</footer>
   </body>
 </html>
