--- a/WS07_project/index.html
+++ b/WS07_project/index.html
@@ -64,8 +64,6 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-   <footer class="footer">
-  &copy;  Elias Kahri. All rights reserved.
-</footer>
+    <footer class="footer">&copy; Elias Kahri. All rights reserved.</footer>
   </body>
 </html>
