--- a/WS07_project/second.html
+++ b/WS07_project/second.html
@@ -9,11 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="styles2.css" />
-
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+      <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img src="../images/cs2.webp" height="30" width="30" alt="CS2"
         /></a>
@@ -44,7 +43,7 @@
             </li>
           </ul>
         </div>
-    </div>
+      </div>
     </nav>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
@@ -122,7 +121,7 @@
       <label for="dot4"></label>
       <label for="dot5"></label>
     </div>
-  
+
     <div class="teams">
       <div class="card">
         <img src="..//images/spirit.png" alt="Spirit" />
@@ -155,37 +154,57 @@
         <div>FaZe Clan</div>
       </div>
       <div class="card">
-        <img src="..//images/falcnons.png" width="320" height="320" alt="Falcons" />
+        <img
+          src="..//images/falcnons.png"
+          width="320"
+          height="320"
+          alt="Falcons"
+        />
         <div>Team Falcons</div>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <br />
 
-<h3 class="text-center">MAJOR TOURNAMENTS IN COUNTER-STRIKE 2</h3>
-<p class="text-center">There a  lot of tournaments that have a prize pool over a million. <br>
-However, the most precious tournaments of the year are the majors. <br>
-Last Major was won by team Spirit in Shanghai. The most recognized <br>tournaments are usually held in Cologne,
-Germany and Katowice, Poland.</p>
-<div class="gallery">
-  <div class="img-wrapper">
-    <img src="../images/esl.webp" alt="Cologne Event" width="320" height="320">
-    <span class="img-text">ESL One Cologne</span>
-  </div>
-  <div class="img-wrapper">
-    <img src="../images/katowice.jpg" alt="Katowice Event" width="320" height="320">
-    <span class="img-text">ESL One Katowice</span>
-  </div>
-  <div class="img-wrapper">
-      <img src="..//images/cs2-major-shanghai.jpg" alt="Shanghai Major" width="320" height="320">
-      <span class="img-text">PGL Shanghai Major</span>
-  </div>
-</div>
-
-<footer class="footer">
-  &copy;  Elias Kahri. All rights reserved.
-</footer>
-</body>
+    <h3 class="text-center">MAJOR TOURNAMENTS IN COUNTER-STRIKE 2</h3>
+    <p class="text-center">
+      There a lot of tournaments that have a prize pool over a million. <br />
+      However, the most precious tournaments of the year are the majors. <br />
+      Last Major was won by team Spirit in Shanghai. The most recognized
+      <br />tournaments are usually held in Cologne, Germany and Katowice,
+      Poland.
+    </p>
+    <div class="gallery">
+      <div class="img-wrapper">
+        <img
+          src="../images/esl.webp"
+          alt="Cologne Event"
+          width="320"
+          height="320"
+        />
+        <span class="img-text">ESL One Cologne</span>
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="../images/katowice.jpg"
+          alt="Katowice Event"
+          width="320"
+          height="320"
+        />
+        <span class="img-text">ESL One Katowice</span>
+      </div>
+      <div class="img-wrapper">
+        <img
+          src="..//images/cs2-major-shanghai.jpg"
+          alt="Shanghai Major"
+          width="320"
+          height="320"
+        />
+        <span class="img-text">PGL Shanghai Major</span>
+      </div>
+    </div>
+    <footer class="footer">&copy; Elias Kahri. All rights reserved.</footer>
+  </body>
 </html>
