--- a/WS07_project/third.html
+++ b/WS07_project/third.html
@@ -9,12 +9,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="styles3.css" />
-
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="../images/cs2.webp" height="30" width="30" alt="CS2"></a>
+        <a class="navbar-brand" href="#"
+          ><img src="../images/cs2.webp" height="30" width="30" alt="CS2"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,36 +42,46 @@
               <a class="nav-link" href="fourth.html">About</a>
             </li>
           </ul>
-      
         </div>
       </div>
     </nav>
-<h1 class="text-center">HISTORY OF COUNTER-STRIKE</h1>
-    <p class="text-center"> Counter-Strike is a series of multiplayer first-person shooter video
-    games in which players assume the roles of terrorists and
-    counter-terrorists. <br>It has evolved over the years, starting from a
-    Half-Life modification to becoming one of the most iconic esports titles in
-    gaming history. <br><br> Watch different Counter-Strike trailers by clicking a image!</p>
+    <h1 class="text-center">HISTORY OF COUNTER-STRIKE</h1>
+    <p class="text-center">
+      Counter-Strike is a series of multiplayer first-person shooter video games
+      in which players assume the roles of terrorists and counter-terrorists.
+      <br />It has evolved over the years, starting from a Half-Life
+      modification to becoming one of the most iconic esports titles in gaming
+      history. <br /><br />
+      Watch different Counter-Strike trailers by clicking a image!
+    </p>
     <div class="container">
       <div class="text-center">
-        <br>
-        <a href="https://www.youtube.com/watch?v=j71GvZ26H6c"><img src="../images/cs16.jpg" alt="CS 1.6 logo"></a>
+        <br />
+        <a href="https://www.youtube.com/watch?v=j71GvZ26H6c"
+          ><img src="../images/cs16.jpg" alt="CS 1.6 logo"
+        /></a>
         <p>Counter-Strike (1999)</p>
       </div>
       <div class="text-center">
-        <br>
-        <a href="https://www.youtube.com/watch?v=bvI62FUDpKA"><img src="../images/csssource.jpg" alt="cs source logo"></a>
+        <br />
+        <a href="https://www.youtube.com/watch?v=bvI62FUDpKA"
+          ><img src="../images/csssource.jpg" alt="cs source logo"
+        /></a>
         <p>Counter-Strike: Source (2004)</p>
       </div>
       <div class="text-center">
-        <br>
-        <a href="https://www.youtube.com/watch?v=edYCtaNueQY"><img src="../images/csgo2.png" alt="CSGO logo"></a>
-      
+        <br />
+        <a href="https://www.youtube.com/watch?v=edYCtaNueQY"
+          ><img src="../images/csgo2.png" alt="CSGO logo"
+        /></a>
+
         <p>Counter-Strike: Global Offensive (2012)</p>
       </div>
       <div class="text-center">
-        <br>
-        <a href="https://www.youtube.com/watch?v=c80dVYcL69E"><img src="..//images/cs2.webp" alt="CS2 logo"></a>
+        <br />
+        <a href="https://www.youtube.com/watch?v=c80dVYcL69E"
+          ><img src="..//images/cs2.webp" alt="CS2 logo"
+        /></a>
         <p>Counter-Strike 2 (2023)</p>
       </div>
     </div>
@@ -79,8 +90,6 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <footer class="footer">
-  &copy;  Elias Kahri. All rights reserved.
-</footer>
+    <footer class="footer">&copy; Elias Kahri. All rights reserved.</footer>
   </body>
 </html>
